cmd/ccd/parser/scan.go

//line scan.rl:1
package parser

import (
	"github.com/indexdata/ccms/cmd/ccd/ast"
)


//line scan.go:9
const sql_start int = 2
const sql_first_final int = 2
const sql_error int = 0

const sql_en_main int = 2


//line scan.rl:16


type lexer struct {
	data []byte
	p, pe, cs int
	ts, te, act int

	err string
	str string
	optlist []ast.Option
	node ast.Node
}

func newLexer(data []byte) *lexer {
	lex := &lexer{ 
		data: data,
		pe: len(data),
	}
	
//line scan.go:35
	{
	 lex.cs = sql_start
	 lex.ts = 0
	 lex.te = 0
	 lex.act = 0
	}

//line scan.rl:35
	return lex
}

func (lex *lexer) Lex(out *yySymType) int {
	eof := lex.pe
	tok := 0
	
//line scan.go:49
	{
	if ( lex.p) == ( lex.pe) {
		goto _test_eof
	}
	switch  lex.cs {
	case 2:
		goto st_case_2
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 102:
		goto st_case_102
	case 103:
		goto st_case_103
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 111:
		goto st_case_111
	case 112:
		goto st_case_112
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 116:
		goto st_case_116
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 125:
		goto st_case_125
	case 126:
		goto st_case_126
	case 127:
		goto st_case_127
	case 128:
		goto st_case_128
	case 129:
		goto st_case_129
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	case 136:
		goto st_case_136
	case 137:
		goto st_case_137
	case 138:
		goto st_case_138
	case 139:
		goto st_case_139
	case 140:
		goto st_case_140
	case 141:
		goto st_case_141
	case 142:
		goto st_case_142
	case 143:
		goto st_case_143
	case 144:
		goto st_case_144
	case 145:
		goto st_case_145
	case 146:
		goto st_case_146
	case 147:
		goto st_case_147
	}
	goto st_out
tr0:
//line NONE:1
	switch  lex.act {
	case 0:
	{{goto st0 }}
	case 12:
	{( lex.p) = ( lex.te) - 1
 tok = ADD; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 13:
	{( lex.p) = ( lex.te) - 1
 tok = ALL; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 14:
	{( lex.p) = ( lex.te) - 1
 tok = ALTER; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 15:
	{( lex.p) = ( lex.te) - 1
 tok = AND; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 17:
	{( lex.p) = ( lex.te) - 1
 tok = ARCHIVED; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 18:
	{( lex.p) = ( lex.te) - 1
 tok = ASC; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 19:
	{( lex.p) = ( lex.te) - 1
 tok = BY; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 20:
	{( lex.p) = ( lex.te) - 1
 tok = CASCADE; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 21:
	{( lex.p) = ( lex.te) - 1
 tok = CREATE; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 22:
	{( lex.p) = ( lex.te) - 1
 tok = COUNT; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 23:
	{( lex.p) = ( lex.te) - 1
 tok = DELETE; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 24:
	{( lex.p) = ( lex.te) - 1
 tok = DESC; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 25:
	{( lex.p) = ( lex.te) - 1
 tok = DROP; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 26:
	{( lex.p) = ( lex.te) - 1
 tok = ENCRYPTED; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 27:
	{( lex.p) = ( lex.te) - 1
 tok = FALSE; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 28:
	{( lex.p) = ( lex.te) - 1
 tok = FILTER; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 29:
	{( lex.p) = ( lex.te) - 1
 tok = FROM; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 30:
	{( lex.p) = ( lex.te) - 1
 tok = FUND; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 31:
	{( lex.p) = ( lex.te) - 1
 tok = ILIKE; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 32:
	{( lex.p) = ( lex.te) - 1
 tok = INFO; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 33:
	{( lex.p) = ( lex.te) - 1
 tok = INSERT; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 35:
	{( lex.p) = ( lex.te) - 1
 tok = IS; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 36:
	{( lex.p) = ( lex.te) - 1
 tok = INTO; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 38:
	{( lex.p) = ( lex.te) - 1
 tok = LIKE; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 39:
	{( lex.p) = ( lex.te) - 1
 tok = LIMIT; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 40:
	{( lex.p) = ( lex.te) - 1
 tok = NOT; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 41:
	{( lex.p) = ( lex.te) - 1
 tok = NULL; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 42:
	{( lex.p) = ( lex.te) - 1
 tok = OFFSET; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 44:
	{( lex.p) = ( lex.te) - 1
 tok = ORDER; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 45:
	{( lex.p) = ( lex.te) - 1
 tok = PASSWORD; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 46:
	{( lex.p) = ( lex.te) - 1
 tok = PING; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 48:
	{( lex.p) = ( lex.te) - 1
 tok = PROJECTS; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 49:
	{( lex.p) = ( lex.te) - 1
 tok = PROPERTY; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 50:
	{( lex.p) = ( lex.te) - 1
 tok = RETRIEVE; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 51:
	{( lex.p) = ( lex.te) - 1
 tok = SELECT; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 52:
	{( lex.p) = ( lex.te) - 1
 tok = SET; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 53:
	{( lex.p) = ( lex.te) - 1
 tok = SHOW; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 54:
	{( lex.p) = ( lex.te) - 1
 tok = TAG; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 55:
	{( lex.p) = ( lex.te) - 1
 tok = TO; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 56:
	{( lex.p) = ( lex.te) - 1
 tok = TRACK; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 57:
	{( lex.p) = ( lex.te) - 1
 tok = TRUE; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 58:
	{( lex.p) = ( lex.te) - 1
 tok = UPDATE; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 59:
	{( lex.p) = ( lex.te) - 1
 tok = USER; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 60:
	{( lex.p) = ( lex.te) - 1
 tok = VERSION; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 61:
	{( lex.p) = ( lex.te) - 1
 tok = WHERE; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 62:
	{( lex.p) = ( lex.te) - 1
 tok = WITH; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 63:
	{( lex.p) = ( lex.te) - 1
 out.str = string(lex.data[lex.ts:lex.te]); tok = IDENT; {( lex.p)++;  lex.cs = 2; goto _out } }
	case 64:
	{( lex.p) = ( lex.te) - 1
 out.str = string(lex.data[lex.ts+1:lex.te-1]); tok = SLITERAL; {( lex.p)++;  lex.cs = 2; goto _out } }
	}
	
	goto st2
tr3:
//line scan.rl:108
 lex.te = ( lex.p)+1

	goto st2
tr5:
//line scan.rl:45
 lex.te = ( lex.p)+1
{ tok = '('; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr6:
//line scan.rl:46
 lex.te = ( lex.p)+1
{ tok = ')'; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr7:
//line scan.rl:47
 lex.te = ( lex.p)+1
{ tok = '*'; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr8:
//line scan.rl:44
 lex.te = ( lex.p)+1
{ tok = ','; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr10:
//line scan.rl:43
 lex.te = ( lex.p)+1
{ tok = ';'; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr12:
//line scan.rl:48
 lex.te = ( lex.p)+1
{ tok = '='; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr32:
//line scan.rl:106
 lex.te = ( lex.p)
( lex.p)--
{ out.str = string(lex.data[lex.ts+1:lex.te-1]); tok = SLITERAL; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr33:
//line scan.rl:107
 lex.te = ( lex.p)
( lex.p)--
{ out.str = string(lex.data[lex.ts:lex.te]); tok = NUMBER; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr34:
//line scan.rl:49
 lex.te = ( lex.p)
( lex.p)--
{ tok = '<'; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr35:
//line scan.rl:51
 lex.te = ( lex.p)+1
{ tok = LT_OR_EQUAL; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr36:
//line scan.rl:53
 lex.te = ( lex.p)+1
{ tok = NOT_EQUAL; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr37:
//line scan.rl:50
 lex.te = ( lex.p)
( lex.p)--
{ tok = '>'; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr38:
//line scan.rl:52
 lex.te = ( lex.p)+1
{ tok = GT_OR_EQUAL; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr39:
//line scan.rl:105
 lex.te = ( lex.p)
( lex.p)--
{ out.str = string(lex.data[lex.ts:lex.te]); tok = IDENT; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr56:
//line scan.rl:58
 lex.te = ( lex.p)
( lex.p)--
{ tok = ARCHIVE; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr114:
//line scan.rl:76
 lex.te = ( lex.p)
( lex.p)--
{ tok = IN; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr140:
//line scan.rl:85
 lex.te = ( lex.p)
( lex.p)--
{ tok = OR; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
tr161:
//line scan.rl:89
 lex.te = ( lex.p)
( lex.p)--
{ tok = PROJECT; {( lex.p)++;  lex.cs = 2; goto _out } }
	goto st2
	st2:
//line NONE:1
 lex.ts = 0

//line NONE:1
 lex.act = 0

		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof2
		}
	st_case_2:
//line NONE:1
 lex.ts = ( lex.p)

//line scan.go:623
		switch  lex.data[( lex.p)] {
		case 32:
			goto tr3
		case 39:
			goto st1
		case 40:
			goto tr5
		case 41:
			goto tr6
		case 42:
			goto tr7
		case 44:
			goto tr8
		case 59:
			goto tr10
		case 60:
			goto st5
		case 61:
			goto tr12
		case 62:
			goto st6
		case 65:
			goto st7
		case 66:
			goto st21
		case 67:
			goto st22
		case 68:
			goto st35
		case 69:
			goto st43
		case 70:
			goto st51
		case 73:
			goto st63
		case 76:
			goto st73
		case 78:
			goto st78
		case 79:
			goto st82
		case 80:
			goto st90
		case 82:
			goto st109
		case 83:
			goto st116
		case 84:
			goto st123
		case 85:
			goto st129
		case 86:
			goto st136
		case 87:
			goto st142
		case 95:
			goto tr20
		case 97:
			goto st7
		case 98:
			goto st21
		case 99:
			goto st22
		case 100:
			goto st35
		case 101:
			goto st43
		case 102:
			goto st51
		case 105:
			goto st63
		case 108:
			goto st73
		case 110:
			goto st78
		case 111:
			goto st82
		case 112:
			goto st90
		case 114:
			goto st109
		case 115:
			goto st116
		case 116:
			goto st123
		case 117:
			goto st129
		case 118:
			goto st136
		case 119:
			goto st142
		}
		switch {
		case  lex.data[( lex.p)] < 48:
			if 9 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 13 {
				goto tr3
			}
		case  lex.data[( lex.p)] > 57:
			switch {
			case  lex.data[( lex.p)] > 90:
				if 103 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto tr20
				}
			case  lex.data[( lex.p)] >= 71:
				goto tr20
			}
		default:
			goto st4
		}
		goto st0
st_case_0:
	st0:
		 lex.cs = 0
		goto _out
	st1:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof1
		}
	st_case_1:
		if  lex.data[( lex.p)] == 39 {
			goto tr2
		}
		goto st1
tr2:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:106
 lex.act = 64;
	goto st3
	st3:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof3
		}
	st_case_3:
//line scan.go:759
		if  lex.data[( lex.p)] == 39 {
			goto st1
		}
		goto tr32
	st4:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof4
		}
	st_case_4:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st4
		}
		goto tr33
	st5:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof5
		}
	st_case_5:
		switch  lex.data[( lex.p)] {
		case 61:
			goto tr35
		case 62:
			goto tr36
		}
		goto tr34
	st6:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof6
		}
	st_case_6:
		if  lex.data[( lex.p)] == 61 {
			goto tr38
		}
		goto tr37
	st7:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof7
		}
	st_case_7:
		switch  lex.data[( lex.p)] {
		case 46:
			goto tr20
		case 68:
			goto st9
		case 76:
			goto st10
		case 78:
			goto st13
		case 82:
			goto st14
		case 83:
			goto st20
		case 95:
			goto tr20
		case 100:
			goto st9
		case 108:
			goto st10
		case 110:
			goto st13
		case 114:
			goto st14
		case 115:
			goto st20
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr20
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr20
			}
		default:
			goto tr20
		}
		goto tr39
tr20:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:105
 lex.act = 63;
	goto st8
tr45:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:54
 lex.act = 12;
	goto st8
tr46:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:55
 lex.act = 13;
	goto st8
tr49:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:56
 lex.act = 14;
	goto st8
tr50:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:57
 lex.act = 15;
	goto st8
tr57:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:59
 lex.act = 17;
	goto st8
tr58:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:60
 lex.act = 18;
	goto st8
tr59:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:61
 lex.act = 19;
	goto st8
tr67:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:62
 lex.act = 20;
	goto st8
tr70:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:64
 lex.act = 22;
	goto st8
tr74:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:63
 lex.act = 21;
	goto st8
tr81:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:65
 lex.act = 23;
	goto st8
tr82:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:66
 lex.act = 24;
	goto st8
tr84:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:67
 lex.act = 25;
	goto st8
tr92:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:68
 lex.act = 26;
	goto st8
tr99:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:69
 lex.act = 27;
	goto st8
tr103:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:70
 lex.act = 28;
	goto st8
tr105:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:71
 lex.act = 29;
	goto st8
tr107:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:72
 lex.act = 30;
	goto st8
tr110:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:77
 lex.act = 35;
	goto st8
tr113:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:73
 lex.act = 31;
	goto st8
tr118:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:74
 lex.act = 32;
	goto st8
tr121:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:75
 lex.act = 33;
	goto st8
tr122:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:78
 lex.act = 36;
	goto st8
tr126:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:80
 lex.act = 38;
	goto st8
tr128:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:81
 lex.act = 39;
	goto st8
tr131:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:82
 lex.act = 40;
	goto st8
tr133:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:83
 lex.act = 41;
	goto st8
tr139:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:84
 lex.act = 42;
	goto st8
tr143:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:86
 lex.act = 44;
	goto st8
tr152:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:87
 lex.act = 45;
	goto st8
tr154:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:88
 lex.act = 46;
	goto st8
tr162:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:90
 lex.act = 48;
	goto st8
tr166:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:91
 lex.act = 49;
	goto st8
tr173:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:92
 lex.act = 50;
	goto st8
tr177:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:94
 lex.act = 52;
	goto st8
tr180:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:93
 lex.act = 51;
	goto st8
tr182:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:95
 lex.act = 53;
	goto st8
tr184:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:97
 lex.act = 55;
	goto st8
tr186:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:96
 lex.act = 54;
	goto st8
tr190:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:98
 lex.act = 56;
	goto st8
tr191:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:99
 lex.act = 57;
	goto st8
tr197:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:100
 lex.act = 58;
	goto st8
tr199:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:101
 lex.act = 59;
	goto st8
tr205:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:102
 lex.act = 60;
	goto st8
tr210:
//line NONE:1
 lex.te = ( lex.p)+1

//line scan.rl:103
 lex.act = 61;
	goto st8
tr212:
//line NONE:1
 lex.te = ( lex.p)+1
